feat: graphql executor sync and async execute method